--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="character" ng-class="{'selected':character.selected}" ng-repeat="character in characters" >
           <img src="{{character.picture}}" ng-click="pick(character)" title="{{character.name}}">
         </div>
-        <md-button class="md-raised md-primary" ng-click="shuffle(characters)">Select characters</md-button>
-        <md-button class="md-raised md-primary" ng-click="reset_cards(cards)">Reset</md-button>
+        <div id="buttons" style="width: 160px; float: left;">
+          <md-button class="md-raised md-primary" ng-click="shuffle(characters)">Select characters</md-button>
+          <md-button class="md-raised md-primary" ng-click="reset_cards(cards)">Reset</md-button>  
+        </div>
       </div>
       <div id="gameboard" ng-class="{'ready':game_started}">
         <div class="tile" ng-class="{'isdead':card.isDead}" ng-repeat="card in cards" >
