--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="ngWerewolf.css">
     <link href='https://fonts.googleapis.com/css?family=Butcherman' rel='stylesheet'>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.css">
-    <title>~~~ Flat Fourteener's Halloweerewolf ~~~</title>
+    <title>~~~ Happy New Yearwolf! ~~~</title>
   </head> 
 
   <body ng-controller="cardCtrl">
-    <span id="title">~~~ Flat Fourteeners Halloweerwolf ~~~</span>
+    <span id="title">~~~ Happy New Yearwolf! ~~~</span>
     <div id="gameContainer">
       <div id="character_selection">
         <div class="character" ng-class="{'selected':character.selected}" ng-repeat="character in characters" >
